--- a/freecodecamp.one/css/style.css
+++ b/freecodecamp.one/css/style.css
@@ -23,6 +23,7 @@ body {
   margin: 0;
   color: #333;
   padding-bottom: 50px;
+  font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -57,6 +58,20 @@ body {
   background: #fff;
 }
 
+.qrcode {
+  position:relative;top:-1px;
+  display: inline-block;
+  width: 16px;
+}
+.city_qr {
+  position: absolute;
+  display: none;
+}
+.qrcode:hover  .city_qr{
+  display: block;
+  width: 160px;
+  height: 160px;
+}
 .top_links {
   margin: 20px 0;
   font-size: 13px;
@@ -66,12 +81,12 @@ body {
   color: #029950;
   font-size: 13px;
   margin-right: 10px;
+  opacity: 0.85;
   margin-left: 10px;
 }
 
 .top_links a:hover {
-  opacity: 0.8;
-  font-weight: 600;
+  opacity: 1;
 }
 
 .top_links a:first-child {
@@ -94,7 +109,6 @@ body {
 .snap .info {
   float: left;
   width: 40%;
-  padding-left: 120px;
 }
 
 .snap .info_t {
@@ -105,7 +119,7 @@ body {
 
 .snap ul {
   margin: 0;
-  padding: 0;
+  padding-left: 120px;
 }
 
 .snap li {
@@ -138,10 +152,10 @@ body {
 }
 
 .list_item .img_content>div {
-  width: 160px;
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  height: 160px;
+  width: 120px;
+  height: 120px;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -168,7 +182,7 @@ body {
 }
 
 .part_item img {
-  height: 80px;
+  height: 50px;
   width: auto;
 }
 .teacher em{margin-right: 10px;}
@@ -178,7 +192,10 @@ body {
 }
 
 .speaker_img {
-  width: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
   margin: 0 auto;
 }
 
@@ -217,21 +234,15 @@ body {
 }
 
 .story .name {
+  display: inline-block;
   background: #029950;
   color: #fff;
+  text-align: center;
   border-radius: 2px;
   height: 40px;
+  font-size: 16px;
   line-height: 40px;
-  text-align: center;
-  width: 180px;
-}
-.more_item{
-  text-align: center;
-  width: 100px;
-  margin: 0 auto;
-  padding: 10px 0;
-  cursor: pointer;
-  animation: more_item 2s infinite;
+  padding:0 20px;
 }
 @-webkit-keyframes more_item{
   0%{opacity: 0.5;}
@@ -269,8 +280,8 @@ body {
     width: 50%;
   }
   .list_item .img_content>div {
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
   }
   .part_item {
     width: 45%;
