--- a/freecodecamp.one/css/style.css
+++ b/freecodecamp.one/css/style.css
@@ -100,9 +100,29 @@ body {
 
 .snap .img_box {
   float: left;
+  position: relative;
   width: 60%;
 }
-
+.shadowin {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  padding: 10px 20px;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.6);
+  color: #f9f9f9;
+  font-size: 17px;
+  z-index: 3;
+}
+.shadowin p {
+  margin-bottom: 10px;
+  margin-top: 0;
+}
 .snap .img_box img {
   width: 100%;
 }
