--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,3 +328,18 @@ body {
     margin-top: 40px;
   }
 }
+nav{padding:0 20px;;position:sticky;position:-webkit-sticky;top:0;z-index:3;background:#029950;box-shadow:0 2px 5px rgba(0, 0, 0, 0.3);}
+nav ul{height:50px;line-height:50px;list-style:none;margin: 0;padding: 0;}
+nav li{float: left;font-size: 18px;padding:0 10px;}
+nav a{color:#f7f7f7}
+.nav_bar,.nav_toggle{float: right;}
+.nav_toggle{display: none;width:50px;height:50px;}
+#freecodecamp{margin-top:20px;}
+@media screen and (max-width:620px){
+  nav,nav>ul{overflow: initial!important;}
+  nav{padding: 0 10px;}
+  .head_logo img{width: 180px;}
+  .nav_bar{display: none;z-index:3;background:#029950;position: absolute;top: 50px;left:0;right: 0;border-top:1px solid #f8f8f8;}
+  .nav_bar ul{height: auto;}
+  .nav_bar li{float: none;}
+  .nav_toggle{display: block;}
