--- a/styles/globals.less
+++ b/styles/globals.less
@@ -368,7 +368,7 @@ nav ul{height:50px;line-height:50px;list-style:none;margin: 0;padding: 0;}
 nav li{float: left;font-size: 18px;padding:0 10px;}
 nav a{color:#f7f7f7}
 .nav_bar,.nav_toggle{float: right;}
-.nav_toggle{display: none;width:50px;height:50px;}
+.nav_toggle{width:50px;height:50px;}
 #freecodecamp{margin-top:20px;}
 @media screen and (max-width:620px) {
   nav, nav > ul {
