fix: change to css module

--- a/styles/globals.less
+++ b/styles/globals.less
@@ -32,11 +32,6 @@ article {
   }
 }
 
-
-* {
-  box-sizing: border-box
-}
-
 #app {
   padding-bottom: 50px;
 }
@@ -59,7 +54,8 @@ body {
   color: #333;
   padding-bottom: 50px;
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .clearfix {
@@ -97,7 +93,7 @@ body {
   position: fixed;
   display: -webkit-flex;
   -webkit-align-items: center;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0, 0, 0, 0.7);
   -webkit-justify-content: center;
   width: 100vw;
   height: 100vh;
@@ -105,7 +101,7 @@ body {
   top: 0;
   z-index: 3;
 }
-.qrcode img{
+.qrcode img {
   max-width: 300px;
 }
 .top_links {
@@ -130,7 +126,7 @@ body {
 }
 
 .snap {
-  background: #FAFAFA;
+  background: #fafafa;
 }
 
 .snap .img_box {
@@ -149,7 +145,7 @@ body {
   padding: 10px 20px;
   height: 100%;
   width: 100%;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
   color: #f9f9f9;
   font-size: 17px;
   z-index: 3;
@@ -207,7 +203,7 @@ body {
   font-size: 15px;
 }
 
-.list_item .img_content>div {
+.list_item .img_content > div {
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   width: 120px;
@@ -241,7 +237,9 @@ body {
   height: 50px;
   width: auto;
 }
-.teacher em{margin-right: 10px;}
+.teacher em {
+  margin-right: 10px;
+}
 .speaker {
   text-align: center;
   padding-top: 20px;
@@ -272,13 +270,13 @@ body {
 
 .motto {
   font-size: 13px;
-  color: #666
+  color: #666;
 }
 
 .story {
   margin-top: 80px;
 }
-.story h1{
+.story h1 {
   font-weight: normal;
   margin-bottom: 30px;
 }
@@ -298,15 +296,21 @@ body {
   height: 40px;
   font-size: 16px;
   line-height: 40px;
-  padding:0 20px;
+  padding: 0 20px;
 }
-@-webkit-keyframes more_item{
-  0%{opacity: 0.5;}
-  50%{opacity: 1;}
-  100%{opacity: 0.5;}
+@-webkit-keyframes more_item {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
 }
 
-@media screen and (max-width:620px) {
+@media screen and (max-width: 620px) {
   .container {
     width: 100%;
     padding: 0 10px;
@@ -322,7 +326,7 @@ body {
     float: none;
     width: 100%;
   }
-  .snap ul{
+  .snap ul {
     padding: 0;
   }
   .snap .info {
@@ -338,7 +342,7 @@ body {
   .list_item {
     width: 50%;
   }
-  .list_item .img_content>div {
+  .list_item .img_content > div {
     height: 100px;
     width: 100px;
   }
@@ -352,10 +356,10 @@ body {
     width: 120px;
     height: 120px;
   }
-  .story .s_comment{
+  .story .s_comment {
     font-size: 13px;
   }
-  .sm_db{
+  .sm_db {
     display: block;
     margin-top: 5px;
   }
@@ -363,46 +367,49 @@ body {
     margin-top: 40px;
   }
 }
-nav{padding:0 20px;;position:sticky;position:-webkit-sticky;top:0;z-index:3;background:#029950;box-shadow:0 2px 5px rgba(0, 0, 0, 0.3);}
-nav ul{height:50px;line-height:50px;list-style:none;margin: 0;padding: 0;}
-nav li{float: left;font-size: 18px;padding:0 10px;}
-nav a{color:#f7f7f7}
-.nav_bar,.nav_toggle{float: right;}
-.nav_toggle{width:50px;height:50px;}
-#freecodecamp{margin-top:20px;}
-@media screen and (max-width:620px) {
-  nav, nav > ul {
+nav {
+  padding: 0 20px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 3;
+  background: #029950;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+nav ul {
+  height: 50px;
+  line-height: 50px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  float: left;
+  font-size: 18px;
+  padding: 0 10px;
+}
+nav a {
+  color: #f7f7f7;
+}
+nav {
+  padding: 0 20px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 3;
+  background: #029950;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+#freecodecamp {
+  margin-top: 20px;
+}
+@media screen and (max-width: 620px) {
+  nav,
+  nav > ul {
     overflow: initial !important;
   }
 
   nav {
     padding: 0 10px;
-  }
-
-  .head_logo img {
-    width: 180px;
-  }
-
-  .nav_bar {
-    display: none;
-    z-index: 3;
-    background: #029950;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    right: 0;
-    border-top: 1px solid #f8f8f8;
-  }
-
-  .nav_bar ul {
-    height: auto;
-  }
-
-  .nav_bar li {
-    float: none;
-  }
-
-  .nav_toggle {
-    display: block;
   }
 }
