--- a/components/MainNavigator.module.less
+++ b/components/MainNavigator.module.less
@@ -1,8 +1,3 @@
-.clearfix {
-  overflow: auto;
-  zoom: 1;
-}
-
 .nav_bar,
 .nav_toggle {
   float: right;
@@ -13,18 +8,14 @@
   height: 50px;
 }
 
-.head_logo {
-  img {
-    width: 100%;
-    vertical-align: middle;
-  }
+.head_logo img {
+  width: 100%;
+  vertical-align: middle;
 }
 
 @media screen and (max-width: 620px) {
-  .head_logo {
-    img {
-      width: 180px;
-    }
+  .head_logo img {
+    width: 180px;
   }
   .nav_bar {
     display: none;
