--- a/components/MainNavigator.module.less
+++ b/components/MainNavigator.module.less
@@ -1,16 +1,50 @@
-.nav_bar,
-.nav_toggle {
-  float: right;
-}
-
-.nav_toggle {
-  width: 50px;
-  height: 50px;
-}
-
 .head_logo img {
   width: 100%;
   vertical-align: middle;
+}
+
+.navigator {
+  padding: 0 20px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 3;
+  background: #029950;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.navigator {
+  li {
+    float: left;
+    font-size: 18px;
+    padding: 0 10px;
+  }
+
+  ul {
+    height: 50px;
+    line-height: 50px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    color: #f7f7f7;
+  }
+}
+
+.navigator {
+  .nav_bar {
+    float: right;
+  }
+}
+
+.navigator {
+  .nav_toggle {
+    float: right;
+    width: 50px;
+    height: 50px;
+  }
 }
 
 @media screen and (max-width: 620px) {
@@ -31,16 +65,19 @@
   .nav_bar {
     ul {
       height: auto;
+      li {
+        float: none;
+      }
     }
   }
 
-  .nav_bar {
-    li {
-      float: none;
+  .navigator {
+    padding: 0 10px;
+    ul {
+      overflow: initial !important;
     }
-  }
-
-  .nav_toggle {
-    display: block;
+    .nav_toggle {
+      display: block;
+    }
   }
 }
