--- a/styles/globals.less
+++ b/styles/globals.less
@@ -16,18 +16,29 @@ body {
     sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
 
-[contenteditable='true'],
-article {
-  img {
-    max-width: 100%;
-  }
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  vertical-align: middle;
+}
+
+body {
+  margin: 0;
+  color: #333;
+  padding-bottom: 50px;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.clearfix {
+  overflow: auto;
+  zoom: 1;
 }
