--- a/styles/conference/Purpose.module.less
+++ b/styles/conference/Purpose.module.less
@@ -1,29 +1,46 @@
 @media screen and (max-width:620px){
     .abstract h2 {padding-top:34px;}
     .abstract p{width: auto;}
+    .container{padding:0 10px;}
 }
 
-
-.abstract h2{
-    margin: 0;
-    font-size: 24px;
-    padding:70px 0 34px;
-    text-align:center;
-    color:red;
-}
 
 .abstract {
     background: #F5F5F5;
-    text-align: center;
     padding-bottom: 60px;
+    text-align: center;
+
+    h2 {
+        margin: 0;
+        font-size: 24px;
+        padding:70px 0 34px;
+        text-align:center;
+    };
+
+    p {line-height: 1.6rem;
+        width: 80%;
+        margin: 0 auto;
+        text-align:left;
+    }
     
 }
 
-.abstract p {line-height: 1.6rem;
-    width: 80%;
+.container{
+    max-width: 1200px;
     margin: 0 auto;
-    text-align:left;
+    font-size: 14px;
+    position:relative;
+    left:-50px;
 }
+
+.animated{
+    -webkit-animation:animated .5s ease-in-out forwards;
+}
+
+@-webkit-keyframes animated{
+    0%{left:-50px;opacity:0.7;}
+    100%{left:0;opacity:1;}
+  }
 
 
 
