modified Review css config

--- a/styles/conference/Review.module.less
+++ b/styles/conference/Review.module.less
@@ -1,7 +1,30 @@
 @media screen and (max-width:620px){
-    .abstract h2 {padding-top:34px;}
-    .abstract p{width: auto;}
+    .review h2 {padding-top:34px;}
     .container{padding:0 10px;}
+    .revImg{width:100%;}
+}
+
+.review{
+    h2 {
+        margin: 0;
+        font-size: 24px;
+        padding:70px 0 34px;
+        text-align:center;
+    };
+
+    p {
+        margin: 0;
+    }
+} 
+
+
+.revImg{
+    width:600px;margin-bottom:30px;
+}
+
+
+.review_item+.review_item{
+    margin-top: 40px;
 }
 
 .container{
