--- a/styles/conference/Situation.module.less
+++ b/styles/conference/Situation.module.less
@@ -1,8 +1,10 @@
 @media screen and (max-width:620px){
     .container{padding:0 10px;}
+    .situation p{display:-webkit-flex;margin:15px 0;}
+    .situation span:first-child{-webkit-flex:1;}
+    .situation span:nth-child(2){-webkit-flex:2}
+    .situation h2 {padding-top:34px;}
 }
-
-
 
 .container{
     max-width: 1200px;
@@ -19,8 +21,30 @@
 @-webkit-keyframes animated{
     0%{left:-50px;opacity:0.7;}
     100%{left:0;opacity:1;}
-  }
+}
 
+
+.situation{
+    p {
+        margin:36px 0;
+    }
+
+    p:first-child {
+        margin-top: 0;
+    }
+
+    span:first-child{
+        display: inline-block;
+        width: 220px;
+    }
+    
+    h2 {
+        margin: 0;
+        font-size: 24px;
+        padding:70px 0 34px;
+        text-align:center;
+    };
+}
 
 
 
