--- a/styles/conference/Purpose.module.less
+++ b/styles/conference/Purpose.module.less
@@ -8,20 +8,21 @@
 .abstract {
     background: #F5F5F5;
     padding-bottom: 60px;
-    text-align: center;
+
 
     h2 {
         margin: 0;
         font-size: 24px;
         padding:70px 0 34px;
-        text-align:center;
     };
 
-    p {line-height: 1.6rem;
+    p { 
+        line-height: 1.6rem;
         width: 80%;
         margin: 0 auto;
         text-align:left;
     }
+
     
 }
 
