finish Purpose css config

--- a/styles/conference/Purpose.module.less
+++ b/styles/conference/Purpose.module.less
@@ -7,11 +7,12 @@
 
 .abstract {
     background: #F5F5F5;
-    padding-bottom: 60px;
+    //padding-bottom: 60px; 考虑用 pb-4 代替
+    // text-align: center; 考虑用 text-center
 
 
     h2 {
-        margin: 0;
+        margin: 0; // 可以考虑用 m-0 代替
         font-size: 24px;
         padding:70px 0 34px;
     };
