finish Review css config

--- a/styles/conference/Review.module.less
+++ b/styles/conference/Review.module.less
@@ -5,21 +5,22 @@
 }
 
 .review{
+    // text-align: center; , 用 text-center 代替了。
+
     h2 {
         margin: 0;
         font-size: 24px;
         padding:70px 0 34px;
-        text-align:center;
+        text-align:center; //  review 已经有 text-center ，是否考虑这里这里删除 ？ 
     };
 
-    p {
-        margin: 0;
-    }
+    //p {margin: 0;} 用 m-0 代替了。
 } 
 
 
 .revImg{
-    width:600px;margin-bottom:30px;
+    width:600px;
+    margin-bottom:30px;
 }
 
 
