finish Snap css config

--- a/styles/conference/Snap.module.less
+++ b/styles/conference/Snap.module.less
@@ -1,5 +1,5 @@
 @media screen and (max-width:620px){
-    .lights h2{padding-top:34px;}
+    .snap h2{padding-top:34px;}
     .container{padding:0 10px;}
     .sm_flex_warped{-webkit-flex-wrap:wrap;}
     .media{width:45%;margin-top: 20px;padding: 0 5px;}
