--- a/components/conference/Review.module.less
+++ b/components/conference/Review.module.less
@@ -37,10 +37,10 @@
 }
 
 .animated{
-    -webkit-animation:animated .5s ease-in-out forwards;
+    animation:animated .5s ease-in-out forwards;
 }
 
-@-webkit-keyframes animated{
+@keyframes animated{
     0%{left:-50px;opacity:0.7;}
     100%{left:0;opacity:1;}
   }
