--- a/components/conference/Situation.module.less
+++ b/components/conference/Situation.module.less
@@ -15,10 +15,10 @@
 }
 
 .animated{
-    -webkit-animation:animated .5s ease-in-out forwards;
+    animation: animated .5s ease-in-out forwards;
 }
 
-@-webkit-keyframes animated{
+@keyframes animated{
     0%{left:-50px;opacity:0.7;}
     100%{left:0;opacity:1;}
 }
@@ -26,12 +26,13 @@
 
 .situation{
     p {
-        margin:36px 0;
+        margin:36px 0; 
+
+        &:first-child {
+            margin-top: 0;
+        }
     }
 
-    p:first-child {
-        margin-top: 0;
-    }
 
     span:first-child{
         display: inline-block;
