--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -1,51 +1,131 @@
-@media screen and (max-width: 620px) {
-  .abstract h2 {
-    padding-top: 34px;
-  }
-  .abstract p {
-    width: auto;
-  }
-  .container {
-    padding: 0 10px;
-  }
-}
-
-.abstract {
-  background: #f5f5f5;
+.base{
 
   h2 {
     margin: 0;
     font-size: 24px;
-    padding: 70px 0 34px;
+    padding:70px 0 34px;
+    text-align:center;
   }
 
-  p {
-    line-height: 1.6rem;
-    width: 80%;
+  .container{
+    max-width: 1200px;
     margin: 0 auto;
-    text-align: left;
+    font-size: 14px;
+    position:relative;
+    left:-50px;
   }
+
+  .abstract{
+    background: #F5F5F5;
+    text-align: center;
+    padding-bottom: 60px;
+
+    p{
+      line-height: 1.6rem;
+      width: 80%;
+      margin: 0 auto;
+      color: green;
+      text-align:left;
+    }
+  }
+
+  .review{
+    text-align: center;
+
+    .review_item+.review_item{
+      margin-top: 40px;
+    }
+
+    .revImg{
+      width:600px;
+      margin-bottom:30px;
+    }
+
+  }
+  .review_item+.review_item{margin-top: 40px;}  
+  .revImg{width:600px;margin-bottom:30px;}
+
+
+  .situation {
+    p {
+      margin: 36px 0;
+  
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+  
+    span:first-child {
+      display: inline-block;
+      width: 220px;
+    }
+  
+    h2 {
+      margin: 0;
+      font-size: 24px;
+      padding: 70px 0 34px;
+      text-align: center;
+    }
+  }
+
+  .snap{
+    .flex_box{
+      display: -webkit-flex;
+      justify-content: space-between;
+    }
+
+    .media{
+      text-align: center;
+      width: 20%;
+      img{
+        width:80px;
+      }
+
+      p{
+        margin-top: 15px;
+      }
+    }
+  }
+  
+
+  
+
+  .animated{animation:animated .5s ease-in-out forwards;}
+
+  @keyframes animated{
+    0%{left:-50px;opacity:0.7;}
+    100%{left:0;opacity:1;}
+  }
+  
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  font-size: 14px;
-  position: relative;
-  left: -50px;
+@media screen and (max-width:620px){
+  .container{padding:0 10px;}
+  .base h2{padding-top:34px;}
+  .abstract p{width: auto;}
+  .situation p{display:-webkit-flex;margin:15px 0;}
+  .situation span:first-child{flex:1;}
+  .situation span:nth-child(2){flex:2}
+  
+  .snap .sm_flex_warped{flex-wrap:wrap}
+  .media{width:45%;margin-top: 20px;padding: 0 5px;}
+  .media+.media{margin-top:20px;}
+  .revImg{width:100%;}
 }
 
-.animated {
-  animation: animated 0.5s ease-in-out forwards;
-}
 
-@keyframes animated {
-  0% {
-    left: -50px;
-    opacity: 0.7;
-  }
-  100% {
-    left: 0;
-    opacity: 1;
-  }
-}
+  
+    
+
+
+        
+
+
+
+    
+
+
+    
+
+
+
