Adapter bootstrap css config

--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -13,27 +13,23 @@
 
   .container{
     max-width: 1200px;
-    margin: 0 auto;
-    font-size: 14px;
-    position:relative;
+    margin: 0 auto; 
+    font-size: 14px; 
+    position:relative; 
     left:-50px;
   }
 
   .abstract{
     background: #F5F5F5;
-    text-align: center;
-    padding-bottom: 60px;
 
     p{
       line-height: 1.6rem;
-      width: 80%;
       margin: 0 auto;
-      text-align:left;
     }
   }
 
   .review{
-    text-align: center;
+    
     .review_item+.review_item{
       margin-top: 40px;
     }
@@ -52,11 +48,11 @@
         margin-top: 0;
       }
     }
-
+  
     span {
       flex:2
     }
-
+  
     strong{
       display: inline-block;
       width: 220px;
@@ -68,14 +64,15 @@
       display: -webkit-flex;
       justify-content: space-between;
     }
-
+  
     .media{
       text-align: center;
       width: 20%;
+      
       img{
         width:80px;
       }
-
+  
       p{
         margin-top: 15px;
       }
@@ -97,15 +94,19 @@
   .container{padding:0 10px;}
   .base h2{padding-top:34px;}
   .abstract p{width: auto;}
-  .situation p{display:-webkit-flex;margin:15px 0;}
-  .situation span:first-child{flex:1;}
-  .situation span:nth-child(2){flex:2}
+  .situation li{display:-webkit-flex;margin:15px 0;}
+  .situation strong{flex:1;}
+  .situation span{flex:2;}
   
   .snap .sm_flex_warped{flex-wrap:wrap}
   .media{width:45%;margin-top: 20px;padding: 0 5px;}
   .media+.media{margin-top:20px;}
   .revImg{width:100%;}
 }
+
+
+
+
 
 
   
