change text color

--- a/styles/MainNavigator.module.less
+++ b/styles/MainNavigator.module.less
@@ -1,5 +1,11 @@
-.navbar {
+.navBox {
   font-size: large;
+  :global .nav-link {
+    color: rgba(255, 255, 255, 0.9);
+    &:hover {
+      color: rgba(255, 255, 255);
+    }
+  }
 }
 
 .logo {
