--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -7,24 +7,16 @@
     font-size: 14px;
   }
 
-  .abstract {
-    p {
-      line-height: 1.6rem;
-    }
+  .abstract p {
+    line-height: 1.6rem;
   }
 
-  .review {
-    .review_item + .review_item {
-      margin-top: 40px;
-    }
+  .review_item + .review_item {
+    margin-top: 40px;
   }
 
-  .snap {
-    .media {
-      img {
-        width: 80px;
-      }
-    }
+  .snap .media img {
+    width: 80px;
   }
 
   .animated {
@@ -44,25 +36,18 @@
 }
 
 @media screen and (max-width: 620px) {
-  .situation li {
-    display: -webkit-flex;
-    margin: 15px 0;
-  }
-  .snap .sm_flex_warped {
-    -webkit-flex-wrap: wrap;
-  }
-  .media {
+  .snap .media {
     width: 45%;
     margin-top: 20px;
     padding: 0 5px;
-  }
-  .media + .media {
-    margin-top: 20px;
-  }
-  .revImg {
-    width: 100%;
-  }
-  .media img {
-    width: 100px;
+    & + .media {
+      margin-top: 20px;
+    }
+    img {
+      width: 100px;
+    }
+    .revImg {
+      width: 100%;
+    }
   }
 }
