--- a/components/conference/Organization.module.less
+++ b/components/conference/Organization.module.less
@@ -1,13 +1,10 @@
 .organizationInfo {
-  .host_item {
-    width: 80%;
-    a {
-      cursor: pointer;
-    }
+  a {
+    cursor: pointer;
+  }
 
-    p {
-      line-height: 1.6rem;
-    }
+  p {
+    line-height: 1.6rem;
   }
 
   .container {
@@ -17,32 +14,10 @@
 
   .sponsor_item {
     font-size: 18px;
-    img {
-      width: 54%;
-    }
   }
 
-  .progress {
-    -webkit-align-items: center;
-    -webkit-flex-wrap: wrap;
-
-    .partner {
-      a {
-        box-sizing: border-box;
-      }
-      img {
-        max-width: 90%;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 620px) {
-  .container {
-    padding: 0 10px;
-  }
-  .host_item {
-    width: 100%;
+  .partner img {
+    max-width: 90%;
   }
 }
 
