--- a/components/conference/Guest.module.less
+++ b/components/conference/Guest.module.less
@@ -1,7 +1,7 @@
 .media {
   img {
     border-radius: 50%;
-    width: 140px;
+    width: 8.75rem;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
   }
   h4 {
@@ -15,21 +15,6 @@
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 75rem;
   font-size: 14px;
-}
-
-.animated {
-  animation: -webkit-animation 0.5s ease-in-out forwards;
-}
-
-@keyframes animated {
-  0% {
-    left: -50px;
-    opacity: 0.7;
-  }
-  100% {
-    left: 0;
-    opacity: 1;
-  }
 }
