--- a/components/conference/Organization.module.less
+++ b/components/conference/Organization.module.less
@@ -8,7 +8,7 @@
   }
 
   .container {
-    max-width: 1200px;
+    max-width: 75rem;
     font-size: 14px;
   }
 
@@ -18,20 +18,5 @@
 
   .partner img {
     max-width: 90%;
-  }
-}
-
-.animated {
-  animation: -webkit-animation 0.5s ease-in-out forwards;
-}
-
-@keyframes animated {
-  0% {
-    left: -50px;
-    opacity: 0.7;
-  }
-  100% {
-    left: 0;
-    opacity: 1;
   }
 }
