fix by suggestions

--- a/components/conference/Organization.module.less
+++ b/components/conference/Organization.module.less
@@ -1,8 +1,4 @@
 .organizationInfo {
-  a {
-    cursor: pointer;
-  }
-
   p {
     line-height: 1.6rem;
   }
@@ -18,5 +14,13 @@
 
   .partner img {
     max-width: 90%;
+  }
+
+  .partner_item img {
+    width: 130px;
+  }
+
+  .host_item {
+    width: 80%;
   }
 }
