--- a/components/conference/Organization.module.less
+++ b/components/conference/Organization.module.less
@@ -20,7 +20,9 @@
     width: 130px;
   }
 
-  .host_item {
-    width: 80%;
+  .logo {
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 }
