--- a/components/conference/ConferenceSchedule.module.less
+++ b/components/conference/ConferenceSchedule.module.less
@@ -37,4 +37,25 @@
     z-index: 3;
     border-bottom: 2px solid transparent;
   }
+
+  .table_box {
+    display: none;
+  }
+  .table_box:first-child {
+    display: block;
+  }
+  .table_box,
+  .timeline {
+    margin-top: 0;
+    width: 100%;
+    overflow-x: auto;
+    margin-bottom: 0;
+  }
+  .table_box a {
+    color: #1890ff;
+    font-weight: 400;
+    font-size: 14px;
+    display: block;
+    margin-top: 20px;
+  }
 }
