modify table width

--- a/components/conference/ConferenceSchedule.module.less
+++ b/components/conference/ConferenceSchedule.module.less
@@ -2,6 +2,16 @@
   .sm_max_width {
     width: 100% !important;
   }
+  .table_box {
+    th:nth-child(1),
+    td:nth-child(1) {
+      width: 20% !important;
+    }
+    th:nth-child(2),
+    td:nth-child(2) {
+      width: 30% !important;
+    }
+  }
 }
 
 .table_box {
