--- a/styles/globals.less
+++ b/styles/globals.less
@@ -43,6 +43,11 @@ body {
   zoom: 1;
 }
 
+.container {
+  max-width: 75rem;
+  font-size: 14px;
+}
+
 .animated {
   animation: animation 0.5s ease-in-out forwards;
 }
