--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -1,54 +1,20 @@
-.base {
-  h2 {
-    font-size: 24px;
-  }
-  .container {
-    max-width: 1200px;
-    font-size: 14px;
-  }
-
-  .abstract p {
+.abstract {
+  max-width: 75rem;
+  p {
     line-height: 1.6rem;
   }
-
-  .review_item + .review_item {
-    margin-top: 40px;
-  }
-
-  .snap .media {
-    img {
-      width: 80px;
-    }
-    @media screen and (max-width: 620px) {
-      width: 45%;
-      margin-top: 20px;
-      padding: 0 5px;
-
-      & + .media {
-        margin-top: 20px;
-      }
-
-      img {
-        width: 100px;
-      }
-      .revImg {
-        width: 100%;
-      }
-    }
-  }
 }
 
-.animated {
-  animation: -webkit-animation 0.5s ease-in-out forwards;
+.review_item + .review_item {
+  margin-top: 2.5rem;
 }
 
-@keyframes animated {
-  0% {
-    left: -50px;
-    opacity: 0.7;
+.snap .media {
+  img {
+    width: 6.25rem;
   }
-  100% {
-    left: 0;
-    opacity: 1;
+  @media screen and (max-width: 620px) {
+    padding: 0 5px;
+    margin-top: 1.25rem;
   }
 }
