--- a/styles/globals.less
+++ b/styles/globals.less
@@ -42,3 +42,23 @@ body {
   overflow: auto;
   zoom: 1;
 }
+
+.container {
+  max-width: 75rem;
+  font-size: 14px;
+}
+
+.animated {
+  animation: animation 0.5s ease-in-out forwards;
+}
+
+@keyframes animated {
+  0% {
+    left: -50px;
+    opacity: 0.7;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
