feat: ConferencePage compoments : conferenceSchedule (#22)

--- a/components/conference/Guest.module.less
+++ b/components/conference/Guest.module.less
@@ -1,6 +1,7 @@
 .media {
   img {
     border-radius: 50%;
+    width: 8.75rem;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
   }
   h4 {
@@ -10,4 +11,9 @@
     margin-inline-end: 0px;
     font-weight: bold;
   }
+}
+
+.container {
+  max-width: 75rem;
+  font-size: 14px;
 }
