--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -18,3 +18,10 @@
     margin-top: 1.25rem;
   }
 }
+.textShadow {
+  text-shadow:
+    1px 1px 2px black,
+    0 0 1em blue,
+    0 0 0.2em blue;
+  color: white;
+}
