--- a/components/conference/ConferenceBase.module.less
+++ b/components/conference/ConferenceBase.module.less
@@ -1,8 +1,5 @@
-.abstract {
-  max-width: 75rem;
-  p {
-    line-height: 1.6rem;
-  }
+.abstract p {
+  line-height: 1.6rem;
 }
 
 .review_item + .review_item {
