update by suggestions

--- a/pages/city.module.less
+++ b/pages/city.module.less
@@ -4,11 +4,13 @@
   z-index: 3;
 }
 
-#info {
+#try {
   img + * {
+    opacity: 25%;
     display: none;
   }
   img:hover + * {
+    opacity: 100%;
     display: block;
   }
 }
