use opacity control bg show

--- a/pages/city.module.less
+++ b/pages/city.module.less
@@ -2,15 +2,9 @@
   background: rgba(0, 0, 0, 0.6);
   font-size: 14px;
   z-index: 3;
+  opacity: 0;
 }
 
-#try {
-  img + * {
-    opacity: 25%;
-    display: none;
-  }
-  img:hover + * {
-    opacity: 100%;
-    display: block;
-  }
+.shadowIn:hover {
+  opacity: 100%;
 }
