Optimize layout under media query

--- a/pages/city.module.less
+++ b/pages/city.module.less
@@ -8,3 +8,18 @@
 .shadowIn:hover {
   opacity: 100%;
 }
+
+.banner {
+  width: 50%;
+
+  @media screen and (max-width: 620px) {
+    width: 100%;
+  }
+}
+
+.join {
+  width: 25%;
+  @media screen and (max-width: 620px) {
+    width: 100%;
+  }
+}
