modify by suggesitons

--- a/pages/city/city.module.less
+++ b/pages/city/city.module.less
@@ -3,15 +3,13 @@
   font-size: 14px;
   z-index: 3;
   opacity: 0;
-}
-
-.shadowIn:hover {
-  opacity: 100%;
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .banner {
   width: 50%;
-
   @media screen and (max-width: 620px) {
     width: 100%;
   }
