Completed the optimization of the conference page

--- a/components/conference/Organization.module.less
+++ b/components/conference/Organization.module.less
@@ -1,9 +1,16 @@
 .sponsor_item {
   font-size: 18px;
+
+  img {
+    height: 5rem;
+  }
 }
 
 .partner img {
   max-width: 90%;
+  @media (max-width: 768px) {
+    height: 5rem;
+  }
 }
 
 .partner_item img {
