--- a/styles/globals.less
+++ b/styles/globals.less
@@ -49,11 +49,6 @@ body {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
 }
 
-.container {
-  max-width: 75rem;
-  font-size: 14px;
-}
-
 .animated {
   animation: animation 0.5s ease-in-out forwards;
 }
@@ -67,4 +62,9 @@ body {
     left: 0;
     opacity: 1;
   }
+}
+
+.first-line-indent {
+  padding-left: 1ch;
+  text-indent: 3.5ch;
 }
